Se modifica index

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li><a href="#" class="sidebar-link">Administración</a></li>
             
         </ul>
-        <a href="mailto:soporte@daitek.com.ar" class="support-mail">@Soporte</a>
+        <a href="#" class="support-mail">@Soporte</a>
     </div>
 
     <script src="sidebar.js"></script>
